# jarvis-ml-pipeline

./: .coverage  .coveragerc.phase1  .coveragerc.phase2  .dockerignore  .editorconfig  .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  ANTIGRAVITY_AUTO_APPROVE.md  ANTIGRAVITY_MISSION.md  ANTIGRAVITY_PROGRESS.md  CHANGELOG.md  CODEX_MISSION.md  CONTRIBUTING.md  Dockerfile  HANDOFF_20260227_v2.md  HANDOFF_20260228_v3.md  HANDOVER_v10.md  HANDOVER_v11.md  HANDOVER_v12.md  HANDOVER_v14.md  HANDOVER_v15.md  HANDOVER_v16.md  HANDOVER_v17.md  HANDOVER_v18.md  HANDOVER_v19.md  HANDOVER_v2.md  HANDOVER_v3.md  HANDOVER_v4.md  HANDOVER_v5.md  HANDOVER_v6.md  HANDOVER_v7.md  HANDOVER_v8.md  HANDOVER_v9.md  JARVIS_EXPANSION_PLAN_v1.md  LANGUAGE_RULES.yaml  (+149 more)
.antigravity/: config.yaml  rules.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
API_REFERENCE/: index.html
BUNDLE_CONTRACT/: index.html
DECISIONS/: index.html
DEVELOPMENT_PLAN/: index.html
DoD/: index.html
HUMAN_TASKS_PLAYBOOK_2026-02-12/: index.html
KEY_MANAGEMENT/: index.html
MASTER_SPEC/: index.html
QUICKSTART/: index.html
RUBRICS/: cardiovascular_rubric.yaml  immuno_onco_rubric.yaml
RUNBOOK_PERSONAL/: index.html
SCHEMAS/: claim_unit.schema.json  evidence_unit.schema.json
SPEC_AUTHORITY/: index.html
agent-web/: .gitignore  README.md  package-lock.json  package.json  start.ps1
artifacts/: accuracy_results.json  test_analysis.json
cli/: __init__.py  tabular_run.py
configs/: agents.example.yaml  agents.yaml  browser_security.yaml  embedding_config.yml  goldset.jsonl  mcp_config.json  no_stub_allowlist.txt  paper_update_cd13.yaml  paper_update_cd73.yaml  paper_update_cd73_light.yaml  pdf_extract_config.yaml  terminal_security.yaml
dashboard/: adapter_manifest.js  config.json  decision.html  feedback.html  finance.html  index.html  kb.html  ops.html  run.html  runs.html  schedule.html  search.html  settings.html
data_schema/: README.md
deploy/: docker-compose.yml
docs/: API_REFERENCE.md  ARCHITECTURE_DECISIONS.md  BUNDLE_CONTRACT.md  CHANGELOG_v42.md  CITATION_PRECISION.md  CI_CD.md  COVERAGE_POLICY.md  CRITICAL_ENFORCEMENT_LAYER.md  DAILY_COVERAGE_TASKS.md  DECISIONS.md  DEFINITION_OF_DONE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PLAN.md  DecisionLog.md  DoD.md  DoD_PHASE2.md  EVALS_LIVE.md  EVAL_GUIDE.md  FEATURES.md  FEATURES_300.md  FETCH_POLICY.md  GITHUB_ACTIONS_GUIDE.md  GOLDEN_PATH.md  HUMAN_TASKS_PLAYBOOK_2026-02-12.md  INSTALL.md  INTELLIGENCE_UPGRADE.md  JARVIS_ARCHITECTURE.md  JARVIS_COMPLETION_PLAN_v3.md  JARVIS_GUIDE_SIMPLE.md  JARVIS_INFRA_ROADMAP.md  JARVIS_LOCALFIRST_ROADMAP.md  JARVIS_MASTER.md  JARVIS_OS_COMPLETION_INSTRUCTION.md  JARVIS_STATUS.md  JARVIS_V44_ROADMAP.md  JAVIS_RESEARCH_OS.md  JAVIS_STATE_AND_ROADMAP.md  KEY_MANAGEMENT.md  LANDING_PAGE_API_INTEGRATION_2026-02-13.md  LANDING_PAGE_DEPLOYMENT.md  (+62 more)
eval/: retrieval_eval_set.jsonl
evals/: frozen_immuno_v1.jsonl  smoke_eval_set.json  test_trick_sets.py
examples/: generate_report_with_evidence.py  run_evidence_qa.py  run_literature_task.py
infra/: init.sql  prometheus.yml
jarvis_cli/: __init__.py  __main__.py  bibtex.py  browse.py  citation.py  citation_graph.py  citation_stance.py  contradict.py  deep_research.py  evidence.py  mcp.py  merge.py  note.py  obsidian_export.py  orchestrate.py  pdf_extract.py  pipeline.py  prisma.py  score.py  screen.py  search.py  semantic_search.py  skills.py  zotero_sync.py
jarvis_core/: __init__.py  agents.py  alignment.py  api.py  app.py  audio_script.py  autonomous_loop.py  bibliography.py  bibtex.py  bibtex_utils.py  budget_policy.py  bundle.py  bundle_layout.py  bundle_v2.py  calendar_builder.py  career_engines.py  career_planner.py  chain_builder.py  changelog_generator.py  claim.py  claim_export.py  cli.py  clinical_readiness.py  comparison.py  competing_hypothesis.py  config_loader.py  config_utils.py  context_packager.py  cross_field.py  day_in_life.py  diff_engine.py  disk_cache.py  draft_generator.py  education.py  email_generator.py  enforce.py  enforcement.py  errors.py  evidence.py  evidence_qa.py  (+84 more)
jarvis_research_os.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
jarvis_tools/: __init__.py
jarvis_web/: __init__.py  alerting.py  app.py  auth.py  config.py  dashboard.py  dedup.py  feedback_api.py  health.py  job_runner.py  jobs.py  streamlit_app.py
k8s/: deployment.yaml
logs/: log_20251128_011922.json  log_20251128_012729.json  log_20251128_014742.json
plugins/: base.py
policies/: API_CONTRACT.md  SECRETS_POLICY.md  inference_policy.yaml
public/: index.html  schedule.html
reports/: PERSONAL_DASHBOARD_VNEXT_RESULT_2026-02-15.md  audit_repo_state.md  cd13_2025_11_30.md  cd73_2025_11_30.md  cd73_light.md
runs/: archive_index.jsonl  index.json
schemas/: api_map_v1.json  artifact_manifest_v1.schema.json  artifacts_v1.json  audit_v1.json  capabilities_v1.json  controversy_v1.json  meta_extract_v1.json  pipeline_v1.json  rob_v1.json  snapshot_v1.json  workflow_spec_v1.json
scripts/: analyze_test_failures.py  append_coverage_daily_md.py  arch_gate.py  audit_bundle.py  audit_repo_state.py  audit_ui_contract.py  baseline_smoke.sh  bench.py  build_frozen.py  build_runs_index.py  build_search_index.py  bump_version.py  check_core_collection.py  check_eval_balance.py  check_project_contract.py  check_quality_bar.py  ci_coverage.sh  ci_run.py  ci_streak.ps1  ci_sweep.py  daily_coverage_snapshot.sh  detect_garbage_code.py  diff_regression.py  ensure_coverage_xml.py  extract_likes.py  find_dead_code.py  fix_bare_excepts.py  fix_common_test_issues.py  generate_api_map.py  generate_docs.py  generate_pr_summary.py  generate_release_bundle.py  generate_site_assets.py  generate_test_pdf.py  install.sh  jarvis_doctor.py  jarvis_repro.py  javis_dashboard.py  kpi_report.py  mark_large_tests.py  (+44 more)
search/: api_cd73.py  cd73_server.py  index.json  search_cd13.py  search_cd73.py  search_index.json
skills/: BRAIN.md  DBG.md  ENV.md  FINISH.md  JOURNAL.md  MCP.md  OFFICE.md  ORCH.md  (+13 more)
(+2585 files in other folders)
