[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-research-os"
version = "1.0.0"
description = "JARVIS Research OS - AI-Powered Systematic Literature Review Assistant"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "JARVIS Team", email = "jarvis@kaneko-ai.dev"}
]
keywords = [
    "systematic-review",
    "literature-review",
    "evidence-grading",
    "citation-analysis",
    "PRISMA",
    "active-learning",
    "research-assistant",
    "AI",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.23.0",
    "rank-bm25>=0.2.2",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
ml = [
    "lightgbm>=4.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]
pdf = [
    "pymupdf>=1.22.0",
    "pypdf2>=3.0",
    "python-docx>=0.8.11",
    "python-pptx>=0.6.21",
    "reportlab>=4.0",
]
llm = [
    "google-generativeai>=0.3.0",
    "llama-cpp-python>=0.2.0",
]
embedding = [
    "sentence-transformers>=2.2.0",
    "rank_bm25>=0.2.2",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "python-multipart>=0.0.6",
]
browser = [
    "playwright>=1.40",
]
dashboard = [
    "streamlit>=1.32",
    "plotly>=5.20",
    "psutil>=5.9",
]
mcp = [
    "httpx>=0.25",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "pytest-xdist>=3.0",
    "mypy>=1.0",
    "safety>=2.3.0",
    "bandit>=1.7.0",
]
all = [
    "jarvis-research-os[ml,pdf,llm,embedding,web,browser,dashboard,mcp]",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "pytest-xdist>=3.0",
    "mypy>=1.0",
    "pytest-playwright>=0.7.2",
]

[project.scripts]
jarvis = "jarvis_cli:main"
jarvis-screen = "jarvis_core.active_learning.cli:cmd_screen"
javisctl = "jarvis_core.ops_extract.cli.javisctl:main"

[project.urls]
Homepage = "https://github.com/kaneko-ai/jarvis-ml-pipeline"
Documentation = "https://github.com/kaneko-ai/jarvis-ml-pipeline/docs"
Repository = "https://github.com/kaneko-ai/jarvis-ml-pipeline"
Issues = "https://github.com/kaneko-ai/jarvis-ml-pipeline/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvis_core*", "jarvis_tools*", "jarvis_web*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",   # Line too long - 段階的に対応
    "E741",   # Ambiguous variable name - レガシーコード対応
]

[tool.ruff.lint.isort]
known-first-party = ["jarvis_core", "jarvis_web", "jarvis_tools"]

[tool.ruff.lint.per-file-ignores]
"scripts/jarvis_doctor.py" = ["F401"]
"jarvis_core/trend/sources/__init__.py" = ["F401"]
"jarvis_core/lab/__init__.py" = ["F401"]
"jarvis_core/advanced/__init__.py" = ["F401"]
"jarvis_core/ingestion/robust_extractor.py" = ["F401"]
"examples/run_evidence_qa.py" = ["E402"]
"jarvis_core/embeddings/chroma_store.py" = ["F401"]
"jarvis_core/obs/__init__.py" = ["F401"]
# Test files: allow E402 (imports after docstrings) and F401 (dependency detection imports)
"tests/*.py" = ["E402", "F401"]
"tests/**/*.py" = ["E402", "F401"]



[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
show_error_codes = true

[tool.coverage.run]
branch = true
source = ["jarvis_core"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
